# cp2utf8

./: .gitignore  CMakeLists.txt  COPYING  README  README.md
debian/: changelog  control  copyright  cp2utf8-data.install
src/: CMakeLists.txt  converter.cc  converter.h  cp2utf8.cc  cp2utf8.h  tbl_parse.cc  tbl_parse.h  to_utf8.cc  to_utf8.h  translation_table.cc  translation_table.h
tables/: cp852.trans
test/: CMakeLists.txt  test.cc
